# aptavia

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst  tuners.rst
examples/: example.py
src/aptavia/: __init__.py
src/aptavia/tuners/: __init__.py  genetic.py
