[metadata]
name = aptavia 
version = 0.0.0
license = MIT 
description = aptavia is a python package for tuning your PID-Controller.
long_description = file: README.md 
author = Jonas Stepanik
author_email = jonasstepanik@web.de 
classifiers = 
  Development Status :: 1 - Planning
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: Manufacturing
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Adaptive Technologies
  Topic :: Games/Entertainment :: Simulation
  Topic :: Home Automation
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
  Topic :: Software Development :: Embedded Systems
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Application Frameworks
  Topic :: System :: Hardware

[options]
packages = find:
package_dir = 
	=src
include_package_data = True
install_requires = 

[options.packages.find]
where=src
	